# aroc.github.io

./: .coverage  .gitignore  .gitlab-ci.yml  CNAME  README.md  Regal.py  aehub_data.html  aehub_data_dashboard.html  arduino_test_page.html  automatic_pick_area_panel.html  automatic_pick_area_panel_2.html  button_script.py  cockpit_one_pick.html  cockpit_one_pick_2.html  cockpit_one_pick_selection.html  cockpit_one_pick_selection_panel.html  combined_cockpit_one_pick.html  command_panel.html  configuration.py  css_extractor.py  database.db  extractor.py  fonts_connecter.py  header_closed.html  html_formatter.py  html_renamer.py  igus_lib.py  igus_modbus_lib.py  igus_server.py  igus_test_page.html  index-cockpit.html  index.html  info.py  led_lib.py  logger.py  login_page.html  main.py  main_frame_open.html  main_frame_open2.html  main_scrypt.py  (+37 more)
.github/workflows/: test.yml
application/: igus_scripts.py  robot_scripts.py  robot_scrypts.py  xarm_scripts.py
arduino_controller/: arduino_led_controller.py
aroc/: avc.wasm  database.db  main.py
core/: configuration.py  connection_config.py  logger.py  main.py  state.py
db/: database.db  regals.py  trajectory.py
docs/: API.md  index.html  openapi.json
models/: api_types.py  task_manager.py
realsense/: camera.py  connection_manager.py  realsense-server.service  tasks.py
ros2_bridge/: package.xml
ros2_bridge/ros2_bridge/: bridge.py
ros2_bridge/srv/: CallAPI.srv
services/: led_lib.py  robot_clients.py  robot_lib.py  symovo_lib.py
tests/: conftest.py  test_routes_igus.py
utils/: api.py  ws_proxy.py
(+157 files in other folders)
