<?xml version="1.0"?>
<package format="3">
  <name>ros2_bridge</name>
  <version>0.0.0</version>
  <description>ROS2 bridge for interacting with Robot Control Server API.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>requests</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
